--- a/src/Hwp2024.css
+++ b/src/Hwp2024.css
@@ -135,7 +135,7 @@ h1 .hadrianswallTitle {
   /* pointer-events: none; */
 }
 
-.HWPfigcaption {
+.hwpFigCaption {
   text-align: center;
   font-family: bold;
   color: #36454f;
