--- a/src/December2024.css
+++ b/src/December2024.css
@@ -24,11 +24,11 @@
   top: 10%;
   text-decoration: underline;
   margin: 5% 25% 5% 75%;
-  border-radius: 15%;
   -webkit-border-radius: 15%;
   -moz-border-radius: 15%;
   -ms-border-radius: 15%;
   -o-border-radius: 15%;
+  border-radius: 15%;
 }
 
 .LinkDecember2024 {
@@ -52,7 +52,7 @@
   margin-top: 0%;
   margin-bottom: 4%;
   font-size: 1.1rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   font-weight: bold;
   width: 100%;
   opacity: 0.9;
@@ -67,7 +67,7 @@
   margin-top: 3%;
   margin-bottom: 1%;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   font-weight: bold;
   width: 100%;
   opacity: 0.9;
@@ -82,7 +82,7 @@
   margin-top: 0.3%;
   margin-bottom: 2%;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   font-weight: bold;
   width: 100%;
   opacity: 0.9;
@@ -110,7 +110,7 @@
   margin-top: 1%;
   margin-bottom: 2%;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   display: inline-block;
   color: white;
 }
@@ -123,13 +123,13 @@
   width: 25%;
   height: auto;
   border: solid #1f3613 3px;
-  border-radius: 100%;
   margin-top: 1%;
   margin-bottom: 2%;
   -webkit-border-radius: 100%;
   -moz-border-radius: 100%;
   -ms-border-radius: 100%;
   -o-border-radius: 100%;
+  border-radius: 100%;
 }
 
 @media screen and (max-width: 480px) {
@@ -156,8 +156,7 @@
     margin-top: 0%;
     margin-bottom: 10%;
     font-size: 1rem;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-      sans-serif;
+    font-family: Calibri, Trebuchet MS, sans-serif;
     font-weight: bold;
     width: 100%;
     opacity: 0.9;
@@ -180,13 +179,13 @@
     width: 65%;
     height: auto;
     border: solid #1f3613 3px;
-    border-radius: 100%;
     margin-top: 1%;
     margin-bottom: 4%;
     -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
     -ms-border-radius: 100%;
     -o-border-radius: 100%;
+    border-radius: 100%;
   }
 
   .slideshowinstructionsDecember {
@@ -195,8 +194,7 @@
     padding-right: 10%;
     padding-left: 10%;
     font-size: 1.1rem;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-      sans-serif;
+    font-family: Calibri, Trebuchet MS, sans-serif;
     display: inline-block;
     color: white;
   }
