--- a/src/February2025.css
+++ b/src/February2025.css
@@ -79,7 +79,7 @@
   margin-top: 0%;
   margin-bottom: 5%;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   font-weight: bold;
   width: 100%;
 }
@@ -93,7 +93,7 @@
   margin-top: 3%;
   margin-bottom: 1%;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   font-weight: bold;
   width: 100%;
 }
@@ -107,7 +107,7 @@
   margin-top: 0.3%;
   margin-bottom: 2%;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   font-weight: bold;
   width: 100%;
 }
@@ -150,7 +150,7 @@
   color: #687875;
   font-weight: bold;
   font-size: 1rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
   overflow-wrap: normal;
   padding-top: 5%;
 }
@@ -165,7 +165,7 @@
   margin-top: 1%;
   margin-bottom: 1%;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   display: block;
   color: #687875;
 }
