--- a/src/January2025.scss
+++ b/src/January2025.scss
@@ -29,7 +29,7 @@
   margin-top: 0%;
   margin-bottom: 5%;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   font-weight: bold;
   width: 100%;
 }
@@ -43,7 +43,7 @@
   margin-top: 3%;
   margin-bottom: 1%;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   font-weight: bold;
   width: 100%;
 }
@@ -57,7 +57,7 @@
   margin-top: 0.3%;
   margin-bottom: 2%;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   font-weight: bold;
   width: 100%;
 }
@@ -78,7 +78,7 @@
   margin-top: 1%;
   margin-bottom: 2%;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   display: block;
   color: white;
 }
@@ -137,12 +137,12 @@
   border-radius: 20%;
 }
 
-.Januaryfigcaption {
+.januaryFigCaption {
   text-align: center;
   font-family: bold;
   color: black;
   font-size: 1rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   overflow-wrap: normal;
   padding-top: 5%;
 }
@@ -178,8 +178,7 @@
     margin-top: 0%;
     margin-bottom: 10%;
     font-size: 1rem;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-      sans-serif;
+    font-family: Calibri, Trebuchet MS, sans-serif;
   }
 
   .blogPhotoDivJanuary {
