--- a/src/July2024.css
+++ b/src/July2024.css
@@ -68,7 +68,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
   border: solid 2px black;
 }
@@ -85,7 +85,7 @@
   margin-bottom: 5px;
   margin-right: 0px;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
 }
 
@@ -98,7 +98,7 @@
   margin-top: 1%;
   margin-bottom: 0vh;
   font-size: 1rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
 }
 
@@ -130,7 +130,7 @@
   font-family: bold;
   color: white;
   font-size: 1rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
   overflow-wrap: normal;
   padding-top: 5%;
 }
@@ -156,7 +156,7 @@
   margin-top: 5%;
   margin-bottom: 2%;
   font-size: 1rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
   display: inline-block;
   color: white;
 }
