--- a/src/June2024.css
+++ b/src/June2024.css
@@ -18,6 +18,7 @@
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   border-radius: 50%;
+  pointer-events: none;
 }
 
 .backbuttonLink {
@@ -47,7 +48,7 @@
   padding: 10px 10px 10px 10px;
   margin: 5px;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
 }
 
@@ -59,7 +60,7 @@
   padding: 10px 10px 10px 10px;
   margin: 5px;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
 }
 
@@ -72,7 +73,7 @@
   margin-top: 1%;
   margin-bottom: 0vh;
   font-size: 1.1rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
 }
 
@@ -99,12 +100,12 @@
   border-radius: 20%;
 }
 
-.junefigcaption {
+.juneFigCaption {
   text-align: center;
   font-family: bold;
   color: white;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
   overflow-wrap: normal;
   padding-top: 5%;
 }
@@ -146,7 +147,7 @@
   margin-top: 5%;
   margin-bottom: 2%;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
   display: inline-block;
   color: white;
 }
@@ -171,7 +172,7 @@
   margin: 10px;
   font-size: 1.5rem;
   font-weight: bold;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
 }
 
 .CongratsMessageJune {
@@ -283,8 +284,7 @@
     margin: 10px;
     font-size: 1.5rem;
     font-weight: bold;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-      sans-serif;
+    font-family: Calibri, "Trebuchet MS", sans-serif;
   }
 
   .slideshowentryJune {
@@ -324,8 +324,7 @@
     margin-top: 5%;
     margin-bottom: 2%;
     font-size: 1rem;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-      sans-serif;
+    font-family: Calibri, "Trebuchet MS", sans-serif;
     display: inline-block;
     color: white;
     padding: 3%;
@@ -406,8 +405,7 @@
     margin-bottom: 2%;
     padding: 3%;
     font-size: 1rem;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-      sans-serif;
+    font-family: Calibri, "Trebuchet MS", sans-serif;
     display: inline-block;
     color: white;
   }
@@ -421,8 +419,7 @@
     margin: 10px;
     font-size: 1.5rem;
     font-weight: bold;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-      sans-serif;
+    font-family: Calibri, "Trebuchet MS", sans-serif;
   }
 }
 
