--- a/src/March2025.css
+++ b/src/March2025.css
@@ -52,7 +52,7 @@
   margin-top: 3%;
   margin-bottom: 5%;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   font-weight: bold;
   width: 100%;
 }
@@ -66,7 +66,7 @@
   margin-top: 20%;
   margin-bottom: 1%;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   font-weight: bold;
   width: 100%;
 }
@@ -80,7 +80,7 @@
   margin-top: 2%;
   margin-bottom: 1%;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   font-weight: bold;
   width: 100%;
 }
@@ -94,7 +94,7 @@
   margin-top: 0.3%;
   margin-bottom: 2%;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   font-weight: bold;
   width: 100%;
 }
@@ -132,12 +132,12 @@
   border-radius: 20%;
 }
 
-.March2025figcaption {
+.march2025FigCaption {
   text-align: center;
   font-family: bold;
   color: whitesmoke;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   overflow-wrap: normal;
   padding-top: 5%;
 }
@@ -158,7 +158,7 @@
   margin-top: 1%;
   margin-bottom: 1%;
   font-size: 1.3rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
   display: block;
   color: whitesmoke;
   background-color: #816c66;
@@ -211,8 +211,7 @@
   padding-left: 10%;
   color: whitesmoke;
   font-size: 1rem;
-  font-family: "Gill Sans", "Gill Sans MT", "Calibri", "Trebuchet MS",
-    "sans-serif";
+  font-family: Calibri, Trebuchet MS, sans-serif;
 }
 
 .componentWalkDetailsMarch2025 {
@@ -225,8 +224,7 @@
   display: flex;
   flex-direction: column;
   font-size: 1rem;
-  font-family: "Gill Sans", "Gill Sans MT", "Calibri", "Trebuchet MS",
-    "sans-serif";
+  font-family: Calibri, Trebuchet MS, sans-serif;
 }
 
 .titlesMarch2025 {
@@ -314,8 +312,7 @@
     padding-right: 10%;
     padding-left: 10%;
     font-size: 1.1rem;
-    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-      sans-serif;
+    font-family: Calibri, Trebuchet MS, sans-serif;
     display: block;
     color: white;
   }
