--- a/src/May2024.css
+++ b/src/May2024.css
@@ -72,7 +72,7 @@
   padding: 10px 10px 10px 10px;
   margin: 5px;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
 }
 
@@ -84,7 +84,7 @@
   padding: 10px 10px 10px 10px;
   margin: 5px;
   font-size: 1.2rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
 }
 
@@ -96,7 +96,7 @@
   padding: 10px 10px 10px 10px;
   margin: 5px;
   font-size: 1rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
 }
 
@@ -136,12 +136,12 @@
   border-radius: 30px;
 }
 
-.mayfigcaption {
+.mayFigCaption {
   text-align: center;
   font-family: bold;
   color: #36454f;
   font-size: 1rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
   overflow-wrap: normal;
   padding-top: 5%;
 }
@@ -186,7 +186,7 @@
   margin-right: 2%;
   margin-left: 2%;
   font-size: 1rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
   display: inline-block;
   color: #36454f;
 }
