--- a/src/May2025.css
+++ b/src/May2025.css
@@ -137,8 +137,22 @@
   padding: 10px 10px 10px 10px;
   margin: 5px;
   font-size: 1.2rem;
+  font-weight: Calibri, Trebuchet MS, sans-serif;
+}
+
+.newsHeaderMay2025 {
+  color: navy;
+  border: solid 3px navy;
+  background-color: #ffd700;
+  text-align: center;
+  padding: 10px 10px 20px 10px;
+  margin-top: 3%;
+  margin-bottom: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 1.1rem;
   font-weight: bold;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
 }
 
 .newsMay2025 {
@@ -150,7 +164,45 @@
   margin: 3%;
   font-size: 1.1rem;
   font-weight: bold;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: Calibri, Trebuchet MS, sans-serif;
+}
+
+.blogPhotoDivMay2025 {
+  display: flex;
+  flex-direction: row;
+  border: solid 2px navy;
+  background-color: #ffd700;
+  padding-bottom: 2%;
+  padding-top: 3%;
+  padding-left: 2%;
+  padding-right: 2%;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+  width: 100%;
+}
+
+.blogPhotoMay2025 img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
+  height: auto;
+  border: solid navy 4px;
+  -webkit-border-radius: 20%;
+  -moz-border-radius: 20%;
+  -ms-border-radius: 20%;
+  -o-border-radius: 20%;
+  border-radius: 20%;
+}
+
+.may2025FigCaption {
+  text-align: center;
+  font-family: bold;
+  color: navy;
+  font-size: 1.1rem;
+  font-family: Calibri, Trebuchet MS, sans-serif;
+  overflow-wrap: normal;
+  padding-top: 5%;
 }
 
 /*To ensure on laptop screens between 1200px and 1350px screens that the CdSLogo_1 and .May2025Santiago display correctly*/
@@ -213,6 +265,10 @@
     top: 50%;
     left: 35%;
   }
+
+  .blogPhotoDivMay2025 {
+    flex-direction: column;
+  }
 }
 
 @media screen and (min-width: 400px) and (max-width: 480px) {
@@ -237,6 +293,10 @@
     font-size: 1em;
     top: 35%;
     left: 35%;
+  }
+
+  .blogPhotoDivMay2025 {
+    flex-direction: column;
   }
 
   .may2025Background {
@@ -276,6 +336,10 @@
     left: 33%;
   }
 
+  .blogPhotoDivMay2025 {
+    flex-direction: column;
+  }
+
   .may2025Background {
     opacity: 0.7;
     height: 10%;
@@ -312,6 +376,10 @@
     font-size: 1em;
     top: 42%;
     left: 32%;
+  }
+
+  .blogPhotoDivMay2025 {
+    flex-direction: column;
   }
 
   .may2025Background {
