--- a/src/September2024.css
+++ b/src/September2024.css
@@ -460,7 +460,7 @@
   color: #e7b75c;
 }
 
-.CongratsMessagePhD-body {
+.CongratsMessagePhD-main {
   font-family: "Georgia", sans-serif;
   font-weight: bold;
   font-size: 22px;
