--- a/src/june2025.css
+++ b/src/june2025.css
@@ -48,6 +48,12 @@
   border-radius: 15%;
 }
 
+.linkJune2025 {
+  /*This is the coloring and underlining for hyperlinks in the main body of the text */
+  text-decoration: underline;
+  color: whitesmoke;
+}
+
 /* css for catwalkinganimation */
 #bodyWalkingCatAnimation {
   overflow-x: hidden;
@@ -448,6 +454,45 @@
     -ms-transform: translate(0, -273%) scale(0.3);
     -o-transform: translate(0, -273%) scale(0.3);
     transform: translate(0, -273%) scale(0.3);
+  }
+
+  @keyframes move-animation {
+    from {
+      top: -151%;
+      margin-left: 100%;
+    }
+    to {
+      top: 150%;
+      margin-left: -100%;
+    }
+  }
+}
+
+@media only screen and (min-device-width: 412px) and (max-device-width: 920px) and (orientation: portrait) {
+  .headerPhotoJune2025 {
+    /* Scripting for oneplusnord AC2003 Jill's phone see React evernote note's on family blog for further info*/
+    margin-top: -30%;
+    -webkit-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -ms-transform: scale(0.5);
+    -o-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+
+  .monthHeaderJune2025 {
+    margin-top: 15%;
+    margin-bottom: 15%;
+  }
+
+  .catWalking {
+    width: 400px;
+    height: 200px;
+    margin: 50px auto 0;
+    -webkit-transform: translate(0, -263%) scale(0.3);
+    -moz-transform: translate(0, -263%) scale(0.3);
+    -ms-transform: translate(0, -263%) scale(0.3);
+    -o-transform: translate(0, -263%) scale(0.3);
+    transform: translate(0, -263%) scale(0.3);
   }
 
   @keyframes move-animation {
