Completion of the 31st May blog

--- a/src/May2025.css
+++ b/src/May2025.css
@@ -54,7 +54,7 @@
   color: #ffd700;
 }
 
-.LinkMay2025 {
+.linkMay2025 {
   /*This is the coloring and underlining for hyperlinks in the main body of the text */
   text-decoration: underline;
   color: #1e90ff;
